--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 MODEL="gpt-3.5-turbo"
 NEXT_PUBLIC_MODEL="gpt-3.5-turbo"
-OPENAI_API_KEY="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"
+# OPENAI_API_KEY=""
